--- a/index.html
+++ b/index.html
@@ -7,125 +7,139 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0f1724;
+      --bg:#071024;
       --card:#0b1220;
       --muted:#9aa4b2;
-      --accent:#06b6d4;
       --glass: rgba(255,255,255,0.03);
+      --accent-a: linear-gradient(90deg,#06b6d4,#7c3aed);
+      --accent-b: linear-gradient(90deg,#ff7a18,#af002d);
+      --accent-c: linear-gradient(90deg,#00c6ff,#0072ff);
+      --accent-d: linear-gradient(90deg,#f6d365,#fda085);
+      --accent-e: linear-gradient(90deg,#7bffb2,#00b09b);
       color-scheme: dark;
       font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
     *{box-sizing:border-box}
     html,body{height:100%;margin:0}
     body{
-      background: radial-gradient(1200px 600px at 10% 10%, rgba(6,182,212,0.06), transparent),
-                  linear-gradient(180deg,#071024 0%, #081122 100%);
+      background:
+        radial-gradient(1200px 600px at 10% 10%, rgba(124,58,237,0.06), transparent),
+        linear-gradient(180deg,#071024 0%, #081122 100%);
       display:flex;align-items:center;justify-content:center;padding:28px;color:#e6eef8;
     }
-
-    .container{width:100%;max-width:960px}
-    /* এখন এক কলাম লেআউট */
+    .container{width:100%;max-width:980px}
     .card{
-      display:block;
-      gap:28px;
       background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
       border-radius:14px;padding:28px;border:1px solid rgba(255,255,255,0.04);box-shadow:0 12px 40px rgba(2,6,23,0.7);
     }
 
-    /* Intro */
-    .intro{padding:12px 6px}
     .brand{display:flex;align-items:center;gap:12px}
     .logo{
-      width:56px;height:56px;border-radius:12px;background:linear-gradient(135deg,var(--accent), #7c3aed);display:flex;align-items:center;justify-content:center;font-weight:700;font-family:'Roboto Mono', monospace;color:#021018;font-size:18px;box-shadow:0 6px 18px rgba(7,22,33,0.6)
+      width:64px;height:64px;border-radius:14px;background:linear-gradient(135deg,#06b6d4,#7c3aed);display:flex;align-items:center;justify-content:center;font-weight:800;font-family:'Roboto Mono',monospace;color:#021018;font-size:20px;box-shadow:0 8px 26px rgba(7,22,33,0.6)
     }
-    h1{margin:6px 0 4px;font-size:1.6rem}
+    h1{margin:6px 0 4px;font-size:1.8rem}
     .subtitle{color:var(--muted);margin:0 0 14px}
     .desc{color:var(--muted);line-height:1.5;margin-bottom:18px}
 
-    .social-grid{display:flex;flex-wrap:wrap;gap:10px;margin-top:6px}
-    .link-card{display:flex;align-items:center;gap:12px;padding:10px 12px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent);border:1px solid rgba(255,255,255,0.03);min-width:220px;text-decoration:none;color:inherit;transition:transform .14s ease, box-shadow .14s ease}
-    .link-card:hover{transform:translateY(-6px);box-shadow:0 12px 30px rgba(2,6,23,0.5)}
-    .link-card .icon{width:28px;height:28px;flex-shrink:0}
-    .link-meta{display:flex;flex-direction:column}
-    .link-title{font-weight:600}
-    .link-sub{font-size:13px;color:var(--muted)}
+    .social-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:6px}
+    .link-card{
+      display:flex;align-items:center;gap:12px;padding:12px 14px;border-radius:12px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.00));
+      border:1px solid rgba(255,255,255,0.03);text-decoration:none;color:inherit;transition:transform .14s ease, box-shadow .14s ease;
+      min-height:64px;
+    }
+    .link-card:hover{transform:translateY(-6px);box-shadow:0 18px 40px rgba(7,22,33,0.6)}
+    .icon-wrap{width:48px;height:48px;border-radius:10px;display:flex;align-items:center;justify-content:center;color:#021018;font-weight:700;flex-shrink:0}
+    .meta{display:flex;flex-direction:column}
+    .link-title{font-weight:700}
+    /* hide username text visually but keep accessible through aria-label */
+    .link-sub{display:none}
 
-    /* নিচের বোতন */
-    .actions{display:flex;gap:10px;margin-top:14px;flex-wrap:wrap}
-    .btn-primary{background:linear-gradient(90deg,var(--accent), #7c3aed);padding:10px 14px;border-radius:10px;color:#021018;font-weight:700;border:none;cursor:pointer;text-decoration:none}
+    /* give each card a colorful accent using nth-child */
+    .social-grid a:nth-child(1) .icon-wrap{background:var(--accent-a)}
+    .social-grid a:nth-child(2) .icon-wrap{background:var(--accent-b)}
+    .social-grid a:nth-child(3) .icon-wrap{background:var(--accent-c)}
+    .social-grid a:nth-child(4) .icon-wrap{background:var(--accent-d)}
+    .social-grid a:nth-child(5) .icon-wrap{background:var(--accent-e)}
+    .social-grid a:nth-child(6) .icon-wrap{background:linear-gradient(90deg,#a18cd1,#fbc2eb)}
+
+    .actions{display:flex;gap:12px;margin-top:16px;flex-wrap:wrap}
+    .btn-primary{background:linear-gradient(90deg,#06b6d4,#7c3aed);padding:10px 14px;border-radius:10px;color:#021018;font-weight:700;border:none;cursor:pointer;text-decoration:none}
     .btn-ghost{padding:10px 12px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit;text-decoration:none}
 
-    footer{margin-top:16px;text-align:center;color:var(--muted);font-size:13px}
+    footer{margin-top:18px;text-align:center;color:var(--muted);font-size:13px}
 
     @media (max-width:880px){
-      .link-card{min-width:45%}
+      .social-grid{grid-template-columns:repeat(2,1fr)}
+    }
+    @media (max-width:520px){
+      .social-grid{grid-template-columns:1fr}
     }
   </style>
 </head>
 <body>
   <div class="container">
     <main class="card" role="main">
-      <div class="intro">
-        <div class="brand">
-          <div class="logo">PZ</div>
-          <div>
-            <div style="font-weight:700">PIAS</div>
-            <div style="font-size:13px;color:var(--muted)">CSE Student • Developer</div>
-          </div>
-        </div>
-
-        <h1>Let’s connect and collaborate professionally.</h1>
-        <p class="subtitle">I’m open to projects, discussions, and creative problem-solving.</p>
-        <p class="desc">Use the links to reach out anytime.</p>
-
-        <div class="social-grid" aria-label="Contact links">
-          <a class="link-card" href="https://www.facebook.com/pias404" target="_blank" rel="noopener noreferrer">
-            <span class="icon" aria-hidden="true"><svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07c0 4.96 3.66 9.07 8.43 9.92v-7.02h-2.54v-2.9h2.54V9.21c0-2.5 1.49-3.87 3.77-3.87 1.09 0 2.23.2 2.23.2v2.45h-1.25c-1.23 0-1.61.77-1.61 1.56v1.88h2.74l-.44 2.9h-2.3v7.02C18.34 21.14 22 17.03 22 12.07z"/></svg></span>
-            <div class="link-meta"><div class="link-title">Facebook</div><div class="link-sub">/pias404</div></div>
-          </a>
-
-          <a class="link-card" href="https://github.com/PIAS404" target="_blank" rel="noopener noreferrer">
-            <span class="icon" aria-hidden="true"><svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .5C5.73.5.86 5.37.86 11.64c0 4.9 3.18 9.06 7.59 10.53.56.1.77-.24.77-.54v-1.9c-3.09.67-3.75-1.5-3.75-1.5-.5-1.25-1.22-1.58-1.22-1.58-.99-.68.08-.66.08-.66 1.1.08 1.69 1.13 1.69 1.13.98 1.67 2.57 1.19 3.2.91.1-.71.38-1.19.69-1.46-2.47-.28-5.07-1.24-5.07-5.52 0-1.22.44-2.22 1.16-3.01-.12-.28-.5-1.42.11-2.95 0 0 .95-.3 3.12 1.15a10.79 10.79 0 012.84-.38c.96 0 1.92.12 2.83.38 2.17-1.45 3.12-1.15 3.12-1.15.61 1.53.23 2.67.11 2.95.72.79 1.16 1.79 1.16 3.01 0 4.29-2.6 5.24-5.08 5.52.39.34.73 1.01.73 2.04v3.03c0 .3.21.64.78.53 4.4-1.47 7.57-5.63 7.57-10.53C23.14 5.37 18.27.5 12 .5z"/></svg></span>
-            <div class="link-meta"><div class="link-title">GitHub</div><div class="link-sub">/PIAS404</div></div>
-          </a>
-
-          <a class="link-card" href="https://x.com/pias7x" target="_blank" rel="noopener noreferrer">
-            <span class="icon" aria-hidden="true"><svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M22 5.92c-.63.28-1.3.47-2.01.56.72-.43 1.28-1.12 1.54-1.94-.67.4-1.42.69-2.22.85A3.52 3.52 0 0016.11 4c-1.92 0-3.48 1.56-3.48 3.48 0 .27.03.54.09.79C9.27 8.2 6.05 6.4 4 3.67c-.3.53-.47 1.12-.47 1.76 0 1.21.62 2.27 1.57 2.89-.57-.02-1.11-.18-1.58-.44v.04c0 1.7 1.21 3.12 2.82 3.44-.29.08-.59.12-.9.12-.22 0-.44-.02-.65-.06.45 1.4 1.75 2.42 3.29 2.45A7.07 7.07 0 012 19.54 10 10 0 008.29 21c6.05 0 9.37-5.02 9.37-9.38v-.43c.64-.46 1.2-1.04 1.65-1.7-.58.26-1.2.45-1.85.53z"/></svg></span>
-            <div class="link-meta"><div class="link-title">X</div><div class="link-sub">@pias7x</div></div>
-          </a>
-
-          <a class="link-card" href="https://t.me/pias7x" target="_blank" rel="noopener noreferrer">
-            <span class="icon" aria-hidden="true"><svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M9.04 15.6l-.39 4.5c.56 0 .8-.24 1.1-.52l2.64-2.4 5.48 4.02c1.01.56 1.74.27 2-.95L23.99 4.2c.35-1.77-.64-2.52-1.8-2.08L1.92 9.6c-1.66.62-1.65 1.52-.28 1.94l5.2 1.62 12.09-7.66c.57-.37 1.08-.17.66.2L9.04 15.6z"/></svg></span>
-            <div class="link-meta"><div class="link-title">Telegram</div><div class="link-sub">@pias7x</div></div>
-          </a>
-
-          <a class="link-card" href="https://discord.com/users/1092853825423016037" target="_blank" rel="noopener noreferrer">
-            <span class="icon" aria-hidden="true"><svg width="28" height="28" viewBox="0 0 71 55" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M60.104 4.552A58.2 58.2 0 0046.9.5c-.44.74-.93 1.72-1.28 2.48-3.81-.57-7.55-.57-11.31 0-.35-.76-.84-1.74-1.28-2.48A58.16 58.16 0 0010.9 4.6C2.45 20.07 0 34.19 2.11 48.62 13.66 53.83 25.1 54.5 36.45 54.86c.66-.83 1.23-1.71 1.71-2.64-8.54-.25-16.98-1.59-24.92-5.08 2.16-1.96 4.36-3.63 6.8-5.07 9.53 4.48 19.6 6.88 30.4 6.23 2.01 2.5 4.18 4.79 6.5 6.86 8.05-3.83 12.77-9.74 14.6-17.87-4.1-1.91-8.16-3.86-12.06-6.07 1.5-4.6 2.52-9.47 2.87-14.49zM24.14 37.1c-3.08 0-5.58-2.8-5.58-6.25 0-3.45 2.5-6.25 5.58-6.25 3.08 0 5.58 2.8 5.58 6.25 0 3.45-2.5 6.25-5.58 6.25zm22.72 0c-3.08 0-5.58-2.8-5.58-6.25 0-3.45 2.5-6.25 5.58-6.25 3.08 0 5.58 2.8 5.58 6.25 0 3.45-2.5 6.25-5.58 6.25z"/></svg></span>
-            <div class="link-meta"><div class="link-title">Discord</div><div class="link-sub">1092853825423016037</div></div>
-          </a>
-
-          <a class="link-card" href="mailto:piasahmmed404@gmail.com" target="_blank" rel="noopener noreferrer">
-            <span class="icon" aria-hidden="true"><svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg></span>
-            <div class="link-meta"><div class="link-title">Email</div><div class="link-sub">piasahmmed404@gmail.com</div></div>
-          </a>
-        </div>
-
-        <div class="actions">
-          <button class="btn-primary" onclick="copyText('piasahmmed404@gmail.com')">Copy Email</button>
-          <a class="btn-ghost" href="tel:+8801985337255">Call</a>
+      <div class="brand" style="margin-bottom:6px">
+        <div class="logo">PZ</div>
+        <div>
+          <div style="font-weight:800">PIAS</div>
+          <div style="font-size:13px;color:var(--muted)">CSE Student • Developer</div>
         </div>
       </div>
 
-      <footer>Clean, professional contact page — customize colors or wording anytime.</footer>
+      <h1>Let's connect and collaborate professionally.</h1>
+      <p class="subtitle">I'm open to projects, discussions, and creative problem-solving.</p>
+      <p class="desc">Use the links to reach out anytime.</p>
+
+      <div class="social-grid" aria-label="Contact links">
+        <a class="link-card" href="https://www.facebook.com/pias404" aria-label="Facebook /pias404" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">f</div>
+          <div class="meta"><div class="link-title">Facebook</div><div class="link-sub">/pias404</div></div>
+        </a>
+
+        <a class="link-card" href="https://github.com/PIAS404" aria-label="GitHub /PIAS404" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">GH</div>
+          <div class="meta"><div class="link-title">GitHub</div><div class="link-sub">/PIAS404</div></div>
+        </a>
+
+        <a class="link-card" href="https://x.com/pias7x" aria-label="X @pias7x" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">X</div>
+          <div class="meta"><div class="link-title">X</div><div class="link-sub">@pias7x</div></div>
+        </a>
+
+        <a class="link-card" href="https://t.me/pias7x" aria-label="Telegram @pias7x" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">✈</div>
+          <div class="meta"><div class="link-title">Telegram</div><div class="link-sub">@pias7x</div></div>
+        </a>
+
+        <a class="link-card" href="https://discord.com/users/1092853825423016037" aria-label="Discord 1092853825423016037" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">DS</div>
+          <div class="meta"><div class="link-title">Discord</div><div class="link-sub">1092853825423016037</div></div>
+        </a>
+
+        <a class="link-card" href="mailto:piasahmmed404@gmail.com" aria-label="Email piasahmmed404@gmail.com" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">@</div>
+          <div class="meta"><div class="link-title">Email</div><div class="link-sub">piasahmmed404@gmail.com</div></div>
+        </a>
+      </div>
+
+      <div class="actions">
+        <button class="btn-primary" onclick="copyText('piasahmmed404@gmail.com')">Copy Email</button>
+        <a class="btn-ghost" href="tel:+8801985337255">Call</a>
+      </div>
+
+      <footer>Clean, colorful contact page — usernames hidden visually.</footer>
     </main>
   </div>
 
   <script>
     function copyText(text){
       navigator.clipboard.writeText(text).then(()=>{
-        const old = document.title;document.title = 'Copied ✓';setTimeout(()=>document.title = old,900);
-      }).catch(()=>alert('Copy failed — please copy manually'))
+        const old = document.title; document.title = 'Copied ✓'; setTimeout(()=>document.title = old,900);
+      }).catch(()=>alert('Copy failed'));
     }
   </script>
 </body>
 </html>
+
