--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+html = """<!doctype html>
 <html lang="bn">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PIAS — Contact</title>
+  <title>PIAS - Contact</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -57,11 +57,14 @@
 
     /* give each card a colorful accent using nth-child */
     .social-grid a:nth-child(1) .icon-wrap{background:var(--accent-a)}
-    .social-grid a:nth-child(2) .icon-wrap{background:var(--accent-b)}
-    .social-grid a:nth-child(3) .icon-wrap{background:var(--accent-c)}
-    .social-grid a:nth-child(4) .icon-wrap{background:var(--accent-d)}
-    .social-grid a:nth-child(5) .icon-wrap{background:var(--accent-e)}
-    .social-grid a:nth-child(6) .icon-wrap{background:linear-gradient(90deg,#a18cd1,#fbc2eb)}
+    .social-grid a:nth-child(2) .icon-wrap{background:var(--accent-c)}
+    .social-grid a:nth-child(3) .icon-wrap{background:var(--accent-b)}
+    .social-grid a:nth-child(4) .icon-wrap{background:var(--accent-c)}
+    .social-grid a:nth-child(5) .icon-wrap{background:linear-gradient(90deg,#1db954,#1ed760)}
+    .social-grid a:nth-child(6) .icon-wrap{background:linear-gradient(90deg,#f77737,#f54ea2)}
+    .social-grid a:nth-child(7) .icon-wrap{background:linear-gradient(90deg,#ff5f6d,#ffc371)}
+    .social-grid a:nth-child(8) .icon-wrap{background:var(--accent-e)}
+    .social-grid a:nth-child(9) .icon-wrap{background:linear-gradient(90deg,#a18cd1,#fbc2eb)}
 
     .actions{display:flex;gap:12px;margin-top:16px;flex-wrap:wrap}
     .btn-primary{background:linear-gradient(90deg,#06b6d4,#7c3aed);padding:10px 14px;border-radius:10px;color:#021018;font-weight:700;border:none;cursor:pointer;text-decoration:none}
@@ -75,6 +78,13 @@
     @media (max-width:520px){
       .social-grid{grid-template-columns:1fr}
     }
+
+    /* Modal (coming soon) */
+    .overlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(2,6,23,0.6);z-index:50}
+    .modal{background:#081022;border-radius:12px;padding:20px;max-width:360px;width:90%;box-shadow:0 18px 60px rgba(2,6,23,0.8);border:1px solid rgba(255,255,255,0.04);color:var(--muted);text-align:center}
+    .modal h3{margin:0 0 8px;color:#e6eef8}
+    .modal p{margin:0 0 12px}
+    .modal .close{margin-top:8px;padding:8px 12px;border-radius:8px;background:linear-gradient(90deg,#06b6d4,#7c3aed);border:none;color:#021018;font-weight:700;cursor:pointer}
   </style>
 </head>
 <body>
@@ -93,31 +103,55 @@
       <p class="desc">Use the links to reach out anytime.</p>
 
       <div class="social-grid" aria-label="Contact links">
+        <!-- 1 Facebook -->
         <a class="link-card" href="https://www.facebook.com/pias404" aria-label="Facebook /pias404" target="_blank" rel="noopener noreferrer">
           <div class="icon-wrap" aria-hidden="true">f</div>
           <div class="meta"><div class="link-title">Facebook</div><div class="link-sub">/pias404</div></div>
         </a>
 
-        <a class="link-card" href="https://github.com/PIAS404" aria-label="GitHub /PIAS404" target="_blank" rel="noopener noreferrer">
-          <div class="icon-wrap" aria-hidden="true">GH</div>
-          <div class="meta"><div class="link-title">GitHub</div><div class="link-sub">/PIAS404</div></div>
-        </a>
-
-        <a class="link-card" href="https://x.com/pias7x" aria-label="X @pias7x" target="_blank" rel="noopener noreferrer">
-          <div class="icon-wrap" aria-hidden="true">X</div>
-          <div class="meta"><div class="link-title">X</div><div class="link-sub">@pias7x</div></div>
-        </a>
-
+        <!-- 2 Telegram -->
         <a class="link-card" href="https://t.me/pias7x" aria-label="Telegram @pias7x" target="_blank" rel="noopener noreferrer">
           <div class="icon-wrap" aria-hidden="true">✈</div>
           <div class="meta"><div class="link-title">Telegram</div><div class="link-sub">@pias7x</div></div>
         </a>
 
+        <!-- 3 GitHub -->
+        <a class="link-card" href="https://github.com/PIAS404" aria-label="GitHub /PIAS404" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">GH</div>
+          <div class="meta"><div class="link-title">GitHub</div><div class="link-sub">/PIAS404</div></div>
+        </a>
+
+        <!-- 4 X -->
+        <a class="link-card" href="https://x.com/pias7x" aria-label="X @pias7x" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">X</div>
+          <div class="meta"><div class="link-title">X</div><div class="link-sub">@pias7x</div></div>
+        </a>
+
+        <!-- 5 Spotify -->
+        <a class="link-card" href="https://open.spotify.com/user/31uxgutwhozeerwhs3y7xhau4zmm" aria-label="Spotify 31uxgutwhozeerwhs3y7xhau4zmm" target="_blank" rel="noopener noreferrer">
+          <div class="icon-wrap" aria-hidden="true">♬</div>
+          <div class="meta"><div class="link-title">Spotify</div><div class="link-sub">31uxgutwhozeerwhs3y7xhau4zmm</div></div>
+        </a>
+
+        <!-- 6 Instagram (coming soon) -->
+        <a class="link-card" href="#" onclick="showComingSoon(event,'Instagram')" aria-label="Instagram (coming soon)">
+          <div class="icon-wrap" aria-hidden="true">IG</div>
+          <div class="meta"><div class="link-title">Instagram</div><div class="link-sub">coming soon</div></div>
+        </a>
+
+        <!-- 7 YouTube (coming soon) -->
+        <a class="link-card" href="#" onclick="showComingSoon(event,'YouTube')" aria-label="YouTube (coming soon)">
+          <div class="icon-wrap" aria-hidden="true">YT</div>
+          <div class="meta"><div class="link-title">YouTube</div><div class="link-sub">coming soon</div></div>
+        </a>
+
+        <!-- 8 Discord -->
         <a class="link-card" href="https://discord.com/users/1092853825423016037" aria-label="Discord 1092853825423016037" target="_blank" rel="noopener noreferrer">
           <div class="icon-wrap" aria-hidden="true">DS</div>
           <div class="meta"><div class="link-title">Discord</div><div class="link-sub">1092853825423016037</div></div>
         </a>
 
+        <!-- 9 Email -->
         <a class="link-card" href="mailto:piasahmmed404@gmail.com" aria-label="Email piasahmmed404@gmail.com" target="_blank" rel="noopener noreferrer">
           <div class="icon-wrap" aria-hidden="true">@</div>
           <div class="meta"><div class="link-title">Email</div><div class="link-sub">piasahmmed404@gmail.com</div></div>
@@ -129,8 +163,17 @@
         <a class="btn-ghost" href="tel:+8801985337255">Call</a>
       </div>
 
-      <footer>Clean, colorful contact page — usernames hidden visually.</footer>
+      <footer>Order changed — Instagram & YouTube show "Coming soon".</footer>
     </main>
+  </div>
+
+  <!-- Coming soon modal -->
+  <div class="overlay" id="overlay" onclick="hideOverlay()">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title" onclick="event.stopPropagation()">
+      <h3 id="modal-title">Coming soon</h3>
+      <p id="modal-message">Feature will be available soon.</p>
+      <button class="close" onclick="hideOverlay()">Close</button>
+    </div>
   </div>
 
   <script>
@@ -139,7 +182,22 @@
         const old = document.title; document.title = 'Copied ✓'; setTimeout(()=>document.title = old,900);
       }).catch(()=>alert('Copy failed'));
     }
+
+    function showComingSoon(e, service){
+      if(e) e.preventDefault();
+      document.getElementById('modal-title').innerText = service + ' — Coming soon';
+      document.getElementById('modal-message').innerText = service + ' page is under preparation. Check back later!';
+      document.getElementById('overlay').style.display = 'flex';
+    }
+    function hideOverlay(){
+      document.getElementById('overlay').style.display = 'none';
+    }
   </script>
 </body>
 </html>
+"""
 
+with open("/mnt/data/PIAS_contact_reordered.html", "w", encoding="utf-8") as f:
+    f.write(html)
+
+"/mnt/data/PIAS_contact_reordered.html"
